--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+      # PR branches that alter the build process should be prefixed with `build/`, so
+      # that this workflow runs.
+      - 'build/**'
   workflow_dispatch:
 
 jobs:
