--- a/.github/workflows/launcher-macos.yml
+++ b/.github/workflows/launcher-macos.yml
@@ -1,4 +1,4 @@
-name: Build for macOS
+name: Launcher
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
       # PR branches that alter the build process should be prefixed with `build/`, so
       # that this workflow runs.
       - 'build/**'
+  workflow_call:
   workflow_dispatch:
 
 jobs:
@@ -38,15 +39,12 @@ jobs:
       - name: Download PHP interpreter
         uses: actions/download-artifact@v4
         with:
-          name: php
-          path: php-bin
+          name: php-macos
 
       - name: Prepare binaries
         run: |
-          mv ./php-bin/php bin
-          chmod +x ./bin/php
-          rm -r -f php-arm64 php-x64
-          ls -l bin
+          chmod +x php
+          mv php bin
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -62,7 +60,7 @@ jobs:
       - name: Delete PHP interpreter artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: php
+          name: php-macos
 
       - name: Upload archive
         uses: actions/upload-artifact@v4
