--- a/.github/workflows/php-macos.yml
+++ b/.github/workflows/php-macos.yml
@@ -1,4 +1,4 @@
-name: Build PHP for macOS
+name: PHP
 
 on:
   workflow_call:
@@ -104,6 +104,6 @@ jobs:
       - name: Upload fat binary
         uses: actions/upload-artifact@v4
         with:
-          name: php
+          name: php-macos
           path: php
           overwrite: true
