--- a/.github/workflows/launcher-macos.yml
+++ b/.github/workflows/launcher-macos.yml
@@ -41,21 +41,21 @@ jobs:
           CERTIFICATE_PATH=$RUNNER_TEMP/build.p12
           PROVISION_PROFILE_PATH=$RUNNER_TEMP/build.provisionprofile
           KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-          
+
           # Import the signing certificate and provisioning profile from our secrets.
           echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
           echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PROVISION_PROFILE_PATH
-          
+
           # Create a temporary keychain which will hold the signing certificate.
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
           security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          
+
           # Add the certificate to the keychain.
           security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
           security list-keychain -d user -s $KEYCHAIN_PATH
-          
+
           # Apply the provisioning profile.
           # This path is based on what I found at https://stackoverflow.com/questions/45625347/xcode-provisioning-profiles-location#45642752
           mkdir -p ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
@@ -88,6 +88,11 @@ jobs:
         run: npm clean-install
 
       - name: Create application bundle
+        env:
+          # @see forge.config.js
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: npm run make
 
       - name: Delete PHP interpreter artifact
