Change release workflow so that the macOS launcher build job inherits secrets.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
   launcher-macos:
     name: Build launcher for macOS
     uses: ./.github/workflows/launcher-macos.yml
+    secrets: inherit
 
   launcher-windows:
     name: Build launcher for Windows
