--- a/.github/workflows/php-windows.yml
+++ b/.github/workflows/php-windows.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build:
-    name: Build
+    name: Build PHP
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
