--- a/.github/workflows/php-windows.yml
+++ b/.github/workflows/php-windows.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: crazywhalecc/static-php-cli
-          ref: 2.4.3
+          ref: 2.4.4
 
       - name: Generate cache key
         shell: bash
@@ -49,7 +49,7 @@ jobs:
       # Build the Drupal-ready PHP interpreter.
       - if: steps.cache.outputs.cache-hit != 'true'
         name: Build PHP interpreter
-        run: ./bin/spc build "${{ env.PHP_EXTENSIONS }}" --build-cli --with-libs="${{ env.PHP_LIBRARIES }}"
+        run: ./bin/spc build "${{ env.PHP_EXTENSIONS }}" --build-cli --with-libs="${{ env.PHP_LIBRARIES }}" --debug
 
       # Upload the built interpreters.
       - uses: actions/upload-artifact@v4
