--- a/.github/workflows/php-windows.yml
+++ b/.github/workflows/php-windows.yml
@@ -17,9 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          # @todo Use 2.4.5 when it is tagged.
           repository: crazywhalecc/static-php-cli
-          ref: main
+          ref: 2.4.5
 
       - name: Generate cache key
         shell: bash
