--- a/.github/workflows/php-windows.yml
+++ b/.github/workflows/php-windows.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: crazywhalecc/static-php-cli
+          ref: 2.5.1
 
       - name: Generate cache key
         shell: bash
