--- a/.github/workflows/launcher-windows.yml
+++ b/.github/workflows/launcher-windows.yml
@@ -56,6 +56,22 @@ jobs:
         with:
           name: php-windows
 
+      - name: Code signing
+        uses: azure/trusted-signing-action@v0.5.1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          endpoint: ${{ secrets.AZURE_ENDPOINT }}
+          trusted-signing-account-name: ${{ secrets.AZURE_CODE_SIGNING_NAME }}
+          certificate-profile-name: ${{ secrets.AZURE_CERT_PROFILE_NAME }}
+          files-folder: "./out/Launch Drupal CMS-win32-x64"
+          files-folder-filter: exe,dll
+          file-digest: SHA256
+          timestamp-rfc3161: http://timestamp.acs.microsoft.com
+          timestamp-digest: SHA256
+
       - name: Upload archive
         uses: actions/upload-artifact@v4
         with:
