--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
   launcher-windows:
     name: Build launcher for Windows
     uses: ./.github/workflows/launcher-windows.yml
+    secrets: inherit
 
   publish:
     name: Release assets
