--- a/.github/workflows/launcher-windows.yml
+++ b/.github/workflows/launcher-windows.yml
@@ -47,6 +47,8 @@ jobs:
 
       - name: Set up and Yarn and install dependencies
         uses: threeal/setup-yarn-action@v2
+        with:
+          version: latest
 
       - name: Create application bundle
         run: yarn run make
