--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cms-launcher",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "A quick-start launcher for Drupal CMS.",
   "main": "main.js",
   "scripts": {
@@ -25,5 +25,6 @@
   "dependencies": {
     "get-port": "^7.1.0",
     "yaml": "^2.7.0"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
