--- a/package.json
+++ b/package.json
@@ -7,20 +7,11 @@
     "start": "electron-forge start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
-    "forge": "electron-forge make",
     "make": "electron-builder"
   },
-  "author": "phenaproxima",
+  "author": "Drupal Association",
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^7.6.1",
-    "@electron-forge/maker-deb": "^7.6.1",
-    "@electron-forge/maker-dmg": "^7.6.1",
-    "@electron-forge/maker-rpm": "^7.6.1",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.6.1",
-    "@electron-forge/plugin-fuses": "^7.6.1",
-    "@electron/fuses": "^1.8.0",
-    "@rabbitholesyndrome/electron-forge-maker-portable": "^0.2.0",
     "electron": "^34.0.1",
     "electron-builder": "26.0.12"
   },
