--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -35,5 +35,9 @@ mac:
 productName: 'Launch Drupal CMS'
 
 win:
+  azureSignOptions:
+    endpoint: https://wus2.codesigning.azure.net/
+    certificateProfileName: drupal-association-cert-profile
+    codeSigningAccountName: da-trusted-signing-001
   # On Windows, build a portable app that doesn't require installation.
   target: portable
