--- a/.github/workflows/launcher-macos.yml
+++ b/.github/workflows/launcher-macos.yml
@@ -84,11 +84,21 @@ jobs:
         with:
           node-version: latest
 
-      - name: Set up and Yarn and install dependencies
+      - name: Set up Yarn
         run: |
           corepack enable
           yarn set version berry
-          yarn install
+
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install
 
       # Only notarize tagged releases; Electron Builder skips notarization if
       # these environment variables are undefined.
