--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -1,4 +1,4 @@
-name: Launcher (Windows)
+name: Windows app
 
 on:
   push:
@@ -15,8 +15,8 @@ jobs:
     name: PHP
     uses: ./.github/workflows/php-windows.yml
 
-  build:
-    name: Build launcher
+  app:
+    name: App
     runs-on: windows-latest
     needs:
       - php
@@ -92,6 +92,6 @@ jobs:
       - name: Upload archive
         uses: actions/upload-artifact@v4
         with:
-          name: launcher-windows
+          name: app-windows
           path: './dist/*.exe'
           overwrite: true
