--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,39 +6,39 @@ on:
       - '*'
 
 jobs:
-  launcher-macos:
-    name: Build launcher for macOS
-    uses: ./.github/workflows/launcher-macos.yml
+  app-macos:
+    name: Build app for macOS
+    uses: ./.github/workflows/app-macos.yml
     secrets: inherit
 
-  launcher-windows:
-    name: Build launcher for Windows
-    uses: ./.github/workflows/launcher-windows.yml
+  app-windows:
+    name: Build app for Windows
+    uses: ./.github/workflows/app-windows.yml
     secrets: inherit
 
   publish:
     name: Release assets
     runs-on: ubuntu-latest
     needs:
-      - launcher-macos
-      - launcher-windows
+      - app-macos
+      - app-windows
     steps:
-      - name: Download launcher for macOS (arm64)
+      - name: Download app for macOS (arm64)
         uses: actions/download-artifact@v4
         with:
-          name: launcher-ARM64
+          name: app-ARM64
           path: arm64
 
-      - name: Download launcher for macOS (x64)
+      - name: Download app for macOS (x64)
         uses: actions/download-artifact@v4
         with:
-          name: launcher-X64
+          name: app-X64
           path: x64
 
-      - name: Download launcher for Windows
+      - name: Download app for Windows
         uses: actions/download-artifact@v4
         with:
-          name: launcher-windows
+          name: app-windows
           path: "Drupal CMS"
 
       - name: Gather assets
@@ -49,20 +49,20 @@ jobs:
           mv "./x64/Launch Drupal CMS-$VERSION-x64.dmg" "Drupal CMS (macOS Intel).dmg"
           zip -q -r "Drupal CMS (Windows).zip" "Drupal CMS"
 
-      - name: Delete arm64 macOS launcher artifact
+      - name: Delete arm64 macOS app artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: launcher-ARM64
+          name: app-ARM64
 
-      - name: Delete x64 macOS launcher artifact
+      - name: Delete x64 macOS app artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: launcher-X64
+          name: app-X64
 
-      - name: Delete Windows launcher artifact
+      - name: Delete Windows app artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: launcher-windows
+          name: app-windows
 
       - name: Create release
         uses: softprops/action-gh-release@v2
