--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -1,4 +1,4 @@
-name: Windows app
+name: Windows
 
 on:
   push:
@@ -94,4 +94,6 @@ jobs:
         with:
           name: app-windows
           path: './dist/*.exe'
+          # The executable is already compressed.
+          compression-level: 0
           overwrite: true
