--- a/.github/workflows/php-windows.yml
+++ b/.github/workflows/php-windows.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build:
-    name: Build PHP
+    name: Build
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
