--- a/.github/workflows/app-macos.yml
+++ b/.github/workflows/app-macos.yml
@@ -1,4 +1,4 @@
-name: Launcher (macOS)
+name: Mac
 
 on:
   push:
@@ -12,11 +12,11 @@ on:
 
 jobs:
   php:
-    name: Build PHP
+    name: PHP
     uses: ./.github/workflows/php-macos.yml
 
-  build:
-    name: Build launcher
+  app:
+    name: App
     strategy:
       matrix:
         runner:
@@ -84,21 +84,32 @@ jobs:
         with:
           node-version: latest
 
-      - name: Set up and Yarn and install dependencies
-        uses: threeal/setup-yarn-action@v2
+      - name: Set up Yarn
+        run: |
+          corepack enable
+          yarn set version berry
 
-      # Only do signing and notarization if building for a tagged release.
-      # @see forge.config.js
-      - name: Enable signing and notarization for tagged release
-        run: echo "SIGN=1" >> $GITHUB_ENV
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install
+
+      # Only notarize tagged releases; Electron Builder skips notarization if
+      # these environment variables are undefined.
+      - name: Enable notarization for tagged release
+        run: |
+          echo "APPLE_ID=${{ secrets.APPLE_ID }}" >> $GITHUB_ENV
+          echo "APPLE_APP_SPECIFIC_PASSWORD=${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}" >> $GITHUB_ENV
+          echo "APPLE_TEAM_ID=${{ secrets.APPLE_TEAM_ID }}" >> $GITHUB_ENV
         if: startsWith(github.ref, 'refs/tags/')
 
       - name: Create application bundle
-        env:
-          # @see forge.config.js
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: yarn run make
 
       - name: Delete PHP interpreter artifact
@@ -109,8 +120,8 @@ jobs:
       - name: Upload archive
         uses: actions/upload-artifact@v4
         with:
-          name: launcher-${{ runner.arch }}
-          path: './out/make/Launch Drupal CMS-*.dmg'
+          name: app-${{ runner.arch }}
+          path: './dist/*.dmg'
           # The DMG is already compressed.
           compression-level: 0
           overwrite: true
