--- a/.github/workflows/php-linux.yml
+++ b/.github/workflows/php-linux.yml
@@ -18,7 +18,7 @@ jobs:
         os:
           - ubuntu-latest # x64
           - ubuntu-22.04-arm # arm64
-    runs-on: ${{ runner.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
         with:
