--- a/.github/workflows/php-linux.yml
+++ b/.github/workflows/php-linux.yml
@@ -59,7 +59,8 @@ jobs:
         name: Download PHP source code
         run: ./bin/spc download --with-php=${{ env.PHP_VERSION }} --for-extensions=${{ env.PHP_EXTENSIONS }} --prefer-pre-built
 
-      - run: ./bin/spc doctor
+      - if: steps.cache.outputs.cache-hit != 'true'
+        run: ./bin/spc doctor
 
       # Build the Drupal-ready PHP interpreter.
       - if: steps.cache.outputs.cache-hit != 'true'
