--- a/.github/workflows/php-linux.yml
+++ b/.github/workflows/php-linux.yml
@@ -38,10 +38,6 @@ jobs:
           path: buildroot/bin
           key: php-${{ env.CACHE_KEY }}
 
-      # Install missing packages need to build PHP.
-      - if: steps.cache.outputs.cache-hit != 'true'
-        run: brew install automake gzip
-
       - if: steps.cache.outputs.cache-hit != 'true'
         name: "Set up PHP"
         uses: shivammathur/setup-php@v2
@@ -59,6 +55,9 @@ jobs:
       - if: steps.cache.outputs.cache-hit != 'true'
         name: Download PHP source code
         run: ./bin/spc download --with-php=${{ env.PHP_VERSION }} --for-extensions=${{ env.PHP_EXTENSIONS }} --prefer-pre-built
+
+      - if: steps.cache.outputs.cache-hit != 'true'
+        run: ./bin/spc doctor
 
       # Build the Drupal-ready PHP interpreter.
       - if: steps.cache.outputs.cache-hit != 'true'
