--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,22 +7,22 @@ on:
 
 jobs:
   app-macos:
-    name: Build app for macOS
+    name: Build for macOS
     uses: ./.github/workflows/app-macos.yml
     secrets: inherit
 
   app-windows:
-    name: Build app for Windows
+    name: Build for Windows
     uses: ./.github/workflows/app-windows.yml
     secrets: inherit
 
   app-linux:
-    name: Build app for Linux
+    name: Build for Linux
     uses: ./.github/workflows/app-linux.yml
     secrets: inherit
 
   publish:
-    name: Release assets
+    name: Publish
     runs-on: ubuntu-latest
     needs:
       - app-macos
