--- a/.github/workflows/app-linux.yml
+++ b/.github/workflows/app-linux.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Download PHP interpreter
         uses: actions/download-artifact@v4
         with:
-          name: php-linux-${{ runner.os }}
+          name: php-linux-${{ runner.arch }}
 
       - name: Prepare binaries
         run: |
