--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,32 +7,38 @@ on:
 
 jobs:
   app-macos:
-    name: Build app for macOS
+    name: Build for macOS
     uses: ./.github/workflows/app-macos.yml
     secrets: inherit
 
   app-windows:
-    name: Build app for Windows
+    name: Build for Windows
     uses: ./.github/workflows/app-windows.yml
     secrets: inherit
 
+  app-linux:
+    name: Build for Linux
+    uses: ./.github/workflows/app-linux.yml
+    secrets: inherit
+
   publish:
-    name: Release assets
+    name: Publish
     runs-on: ubuntu-latest
     needs:
       - app-macos
       - app-windows
+      - app-linux
     steps:
       - name: Download app for macOS (arm64)
         uses: actions/download-artifact@v4
         with:
-          name: app-ARM64
+          name: app-mac-ARM64
           path: mac-arm64
 
       - name: Download app for macOS (x64)
         uses: actions/download-artifact@v4
         with:
-          name: app-X64
+          name: app-mac-X64
           path: mac-x64
 
       - name: Download app for Windows
@@ -41,6 +47,18 @@ jobs:
           name: app-windows
           path: win
 
+      - name: Download app for Linux (arm64)
+        uses: actions/download-artifact@v4
+        with:
+          name: app-linux-ARM64
+          path: linux-arm64
+
+      - name: Download app for Linux (x64)
+        uses: actions/download-artifact@v4
+        with:
+          name: app-linux-X64
+          path: linux-x64
+
       - name: Gather assets
         env:
           VERSION: ${{ github.ref_name }}
@@ -48,21 +66,33 @@ jobs:
           mv "./mac-arm64/Launch Drupal CMS-$VERSION-arm64.dmg" "Drupal CMS (macOS Apple silicon).dmg"
           mv "./mac-x64/Launch Drupal CMS-$VERSION-x64.dmg" "Drupal CMS (macOS Intel).dmg"
           mv "./win/Launch Drupal CMS-$VERSION.exe" "Drupal CMS.exe"
+          mv "./linux-arm64/Launch Drupal CMS-$VERSION-arm64.AppImage" "Drupal CMS (Linux arm64).AppImage"
+          mv "./linux-x64/Launch Drupal CMS-$VERSION-x64.AppImage" "Drupal CMS (Linux x64).AppImage"
 
       - name: Delete arm64 macOS app artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: app-ARM64
+          name: app-mac-ARM64
 
       - name: Delete x64 macOS app artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: app-X64
+          name: app-mac-X64
 
       - name: Delete Windows app artifact
         uses: geekyeggo/delete-artifact@v5
         with:
           name: app-windows
+
+      - name: Delete arm64 Linux app artifact
+        uses: geekyeggo/delete-artifact@v5
+        with:
+          name: app-linux-ARM64
+
+      - name: Delete x64 Linux app artifact
+        uses: geekyeggo/delete-artifact@v5
+        with:
+          name: app-linux-X64
 
       - name: Create release
         uses: softprops/action-gh-release@v2
@@ -71,3 +101,5 @@ jobs:
             Drupal CMS (macOS Apple silicon).dmg
             Drupal CMS (macOS Intel).dmg
             Drupal CMS.exe
+            Drupal CMS (Linux arm64).AppImage
+            Drupal CMS (Linux x64).AppImage
