--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -62,10 +62,6 @@ jobs:
         run: yarn install
 
       - name: Create application bundle
-        env:
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: yarn run make
 
       - name: Delete PHP interpreter artifacts
@@ -75,7 +71,7 @@ jobs:
 
       - name: Code signing
         uses: azure/trusted-signing-action@v0.5.1
-        if: startsWith(github.ref, 'refs/tags/')
+        # if: startsWith(github.ref, 'refs/tags/')
         with:
           azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
