--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -40,6 +40,7 @@ mac:
 productName: 'Launch Drupal CMS'
 
 win:
+  artifactName: '${productName}.${ext}'
   # Signing is done in its own build step, for tagged releases on CI only.
   # @see .github/workflows/app-windows.yml
   signtoolOptions:
