--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-windows
-          path: win
+          path: "Drupal CMS"
 
       - name: Download app for Linux (arm64)
         uses: actions/download-artifact@v4
@@ -65,7 +65,7 @@ jobs:
         run: |
           mv "./mac-arm64/Launch Drupal CMS-$VERSION-arm64.dmg" "Drupal CMS (macOS Apple silicon).dmg"
           mv "./mac-x64/Launch Drupal CMS-$VERSION-x64.dmg" "Drupal CMS (macOS Intel).dmg"
-          mv "./win/Launch Drupal CMS-$VERSION.exe" "Drupal CMS.exe"
+          zip -q -r "Drupal CMS (Windows).zip" "Drupal CMS"
           mv "./linux-arm64/Launch Drupal CMS-$VERSION-arm64.AppImage" "Drupal CMS (Linux arm64).AppImage"
           mv "./linux-x64/Launch Drupal CMS-$VERSION-x64.AppImage" "Drupal CMS (Linux x64).AppImage"
 
@@ -100,6 +100,6 @@ jobs:
           files: |
             Drupal CMS (macOS Apple silicon).dmg
             Drupal CMS (macOS Intel).dmg
-            Drupal CMS.exe
+            Drupal CMS (Windows).zip
             Drupal CMS (Linux arm64).AppImage
             Drupal CMS (Linux x64).AppImage
