--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -61,7 +61,16 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
 
+      - name: Install NuGet
+        shell: pwsh
+        run: |
+          pwsh -NoProfile -NonInteractive -Command Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force -Scope CurrentUser
+
       - name: Create application bundle
+        env:
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
         run: yarn run make
 
       - name: Delete PHP interpreter artifacts
@@ -69,23 +78,23 @@ jobs:
         with:
           name: php-windows
 
-      - name: Code signing
-        uses: azure/trusted-signing-action@v0.5.1
+#      - name: Code signing
+#        uses: azure/trusted-signing-action@v0.5.1
 #        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-          endpoint: https://wus2.codesigning.azure.net/
-          trusted-signing-account-name: da-trusted-signing-001
-          certificate-profile-name: drupal-association-cert-profile
-          files-folder: "./dist/win-unpacked"
-          files-folder-filter: exe,dll
-          # We also want to sign the PHP interpreter.
-          files-folder-recurse: true
-          file-digest: SHA256
-          timestamp-rfc3161: http://timestamp.acs.microsoft.com
-          timestamp-digest: SHA256
+#        with:
+#          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+#          endpoint: https://wus2.codesigning.azure.net/
+#          trusted-signing-account-name: da-trusted-signing-001
+#          certificate-profile-name: drupal-association-cert-profile
+#          files-folder: "./dist/win-unpacked"
+#          files-folder-filter: exe,dll
+#          # We also want to sign the PHP interpreter.
+#          files-folder-recurse: true
+#          file-digest: SHA256
+#          timestamp-rfc3161: http://timestamp.acs.microsoft.com
+#          timestamp-digest: SHA256
 
       - name: Upload archive
         uses: actions/upload-artifact@v4
