Unpack Composer as part of the build process (#62)

--- a/.github/workflows/app-macos.yml
+++ b/.github/workflows/app-macos.yml
@@ -61,23 +61,10 @@ jobs:
           mkdir -p ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
           cp $PROVISION_PROFILE_PATH ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles
 
-      - name: Download Composer
-        uses: robinraju/release-downloader@v1
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
         with:
-          repository: composer/composer
-          latest: true
-          fileName: composer.phar
-          out-file-path: bin
-
-      - name: Download PHP interpreter
-        uses: actions/download-artifact@v4
-        with:
-          name: php-macos
-
-      - name: Prepare binaries
-        run: |
-          chmod +x php
-          mv php bin
+          tools: composer
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -100,6 +87,11 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
 
+      - name: Download PHP interpreter
+        uses: actions/download-artifact@v4
+        with:
+          name: php-macos
+
       # Only notarize tagged releases; Electron Builder skips notarization if
       # these environment variables are undefined.
       - name: Enable notarization for tagged release
@@ -110,7 +102,15 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
 
       - name: Create application bundle
-        run: yarn run make
+        run: |
+          mkdir -p bin
+          chmod +x php
+          mv php bin
+          cd bin
+          cp $(which composer) composer.phar
+          phar extract -f composer.phar ./composer
+          rm composer.phar
+          yarn run make
 
       - name: Delete PHP interpreter artifact
         uses: geekyeggo/delete-artifact@v5
