Adjust CI workflows

--- a/.github/workflows/app-linux.yml
+++ b/.github/workflows/app-linux.yml
@@ -68,6 +68,7 @@ jobs:
           cp $(which composer) composer.phar
           phar extract -f composer.phar ./composer
           rm composer.phar
+          yarn run build
           yarn run make
 
       - name: Delete PHP interpreter artifact
