Add TypeScript support

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.52.0",
+    "@types/electron": "^1.6.12",
+    "@types/node": "^24.0.0",
     "electron": "^36",
     "electron-builder": "^26",
     "electron-vite": "^3.1.0",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5"
   },
   "dependencies": {
